--- a/GestionUtilisateur-FrontEnd-master3/src/index.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>UsersWeb</title>
+  <title>Gestion des Ressources Humaines</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
